--- a/Complete_Session_on_Anomaly_Detection.ipynb
+++ b/Complete_Session_on_Anomaly_Detection.ipynb
@@ -155,7 +155,10 @@
       "cell_type": "markdown",
       "source": [
         "## Model development\n",
-        "We'll define the model by using the `OneClassSVM` class of `Scikit-learn` API. Here, we'll set `RBF` for kernel type and define the gamma and the 'nu' arguments."
+        "We'll define the model by using the `OneClassSVM` class of `Scikit-learn` API. Here, we'll set `RBF` for kernel type and define the gamma and the 'nu' arguments.\n",
+        "\n",
+        ">[:Note] *Reference:*\n",
+        ">https://scikit-learn.org/stable/modules/generated/sklearn.svm.OneClassSVM.html"
       ],
       "metadata": {
         "id": "3qqruGFwl-o3"
